# haskellbook

./: .gitignore
chapter1/: chapter-exercises.org  chapter-exercises.tex  equivalence.org  equivalence.tex
chapter10/: chapter-exercise-rewrite-using-folds.hs  chapter-exercise-warm-up.hs  chapter-exercises.org  database-processing.hs  scan-exercises.hs  understanding-folds.hs  understanding-folds.org
chapter11/: binary-tree.hs  binary-tree.org  cardinality.org  chapter-exercise-as-patterns.hs  chapter-exercise-cipher.hs  chapter-exercise-hutton-razor.hs  chapter-exercise-language-exercise.hs  chapter-exercise-phone-exercise.hs  chapter-exercises.org  dog-types.org  for-example.hs  for-example.org  garden-grow.org  logic-goats.hs  logic-goats.org  pity-the-bool.org  programmer.hs  the-quad.org  vehicles.hs  vehicles.org
chapter12/: chapter-exercises-binary-tree.hs  chapter-exercises-its-only-natural.hs  chapter-exercises-small-library-for-either.hs  chapter-exercises-small-library-for-maybe.hs  chapter-exercises-string-processing.hs  chapter-exercises-unfold.hs  chapter-exercises-validate-the-word.hs  chapter-exercises.org
chapter13/: intermission.org  (+3 more)
chapter23/fizzbuzz/: fizzbuzz.cabal  hie.yaml
chapter23/fizzbuzz/src/: FizzBuzz.hs  FizzBuzzDList.hs
chapter23/random-example/: CHANGELOG.md  hie.yaml  random-example.cabal
chapter23/random-example/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter23/random-example/src/: RandomExample.hs  RandomExample2.hs  RollYourOwn.hs
(+304 files in other folders)
