cabal-version:      3.0
name:               random-example
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Abhigya Maskay
maintainer:         ave70011@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  RandomExample
                      , RandomExample2
                      , RollYourOwn
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                      , random
                      , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
